--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -58,6 +58,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1">
                         <TextView
+                            android:id="@+id/home_default_name"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="김재훈"
@@ -65,6 +66,7 @@
                         </TextView>
                     </LinearLayout>
                     <TextView
+                        android:id="@+id/home_default_level"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
