메뉴 걍 삭제
메뉴 걍 삭제

--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -718,6 +718,5 @@
         android:fitsSystemWindows="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:headerLayout="@layout/navi_header"
-        app:menu="@menu/navi_menu" />
+        app:headerLayout="@layout/navi_header" />
 </androidx.drawerlayout.widget.DrawerLayout>
