--- a/app/src/main/res/layout/mypage_layout.xml
+++ b/app/src/main/res/layout/mypage_layout.xml
@@ -34,6 +34,7 @@
                 app:srcCompat="@drawable/ic_account">
             </ImageView>
             <TextView
+                android:id="@+id/mypage_title"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.7"
