--- a/app/src/main/res/layout/mypage_layout.xml
+++ b/app/src/main/res/layout/mypage_layout.xml
@@ -46,7 +46,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_gravity="center"
-                android:id="@+id/review_progress1"
+                android:id="@+id/mypage_progress"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -75,6 +75,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/maxexp"
                     android:layout_gravity="end"
                     android:textAlignment="textEnd"
                     android:layout_marginRight="15dp"
