--- a/app/src/main/res/layout/navi_header.xml
+++ b/app/src/main/res/layout/navi_header.xml
@@ -17,7 +17,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/profile_btn"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:paddingTop="10dp"
